--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Yassine Naji's Store</title>
+    <title>Yassine Naji's Webmarket</title>
   </head>
   <body>
     <header>
